# Conway-s-Game-of-Life

./: .coverage  README.md  pyproject.toml
src/conway_s_game_of_life/: __init__.py  world.py
tests/: test_cell.py  test_files.py  test_world.py
