[project]
name = "conway-s-game-of-life"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GoulvenBonmarchand", email = "goulven.bonmarchand@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
conway-s-game-of-life = "conway_s_game_of_life.world:main"
game = "conway_s_game_of_life.world:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "pytest>=9.0.2",
]
